--- a/css/europaplus-mediaqueries.less
+++ b/css/europaplus-mediaqueries.less
@@ -1,66 +1,82 @@
 /* --------------------------------------------------------------
 MEDIAQUERIES LG/MD - LAYOUTS BIGGER THAN 992px
 -------------------------------------------------------------- */
-@media (max-width: 1920px) {
+@media (max-width: 1920px) {}
 
-}
-@media (max-width: 1680px) {
+@media (max-width: 1680px) {}
 
-}
-@media (max-width: 1600px) {
+@media (max-width: 1600px) {}
 
-}
 @media (max-width: 1440px) {
+    .header-logo .btn-header {
+        padding: 0.5rem 0.5rem;
+    }
 
+    .header-navbar a {
+        padding: .5rem 1rem !important;
+    }
 }
-@media (max-width: 1366px) {
 
-}
+@media (max-width: 1366px) {}
+
 @media (max-width: 1280px) {
-
+    .header-logo .btn-header {
+        display: none;
+    }
 }
-@media (max-width: 1170px) {
 
-}
-@media (max-width: 1024px) {
+@media (max-width: 1170px) {}
 
-}
-@media (max-width: 992px) {
+@media (max-width: 1024px) {}
 
-}
+@media (max-width: 992px) {}
+
 /* --------------------------------------------------------------
 MEDIAQUERIES SM - LAYOUTS BIGGER THAN 768px
 -------------------------------------------------------------- */
-@media (max-width: 991px) {
+@media (max-width: 991px) {}
 
-}
-@media (max-width: 800px) {
+@media (max-width: 800px) {}
 
-}
-@media (max-width: 768px) {
+@media (max-width: 768px) {}
 
-}
 /* --------------------------------------------------------------
 MEDIAQUERIES XS - LAYOUTS LESS THAN 768px
 -------------------------------------------------------------- */
 @media (max-width: 600px) {
+    .main-post-thumbnail .main-post-thumbnail-overlay h1 {
+        font-size: 1.2rem;
+        line-height: 2.1rem;
+    }
 
-}
-@media (max-width: 533px) {
+    .main-post-thumbnail .main-post-thumbnail-overlay {
+        padding: 1.5rem;
+        font-size: 0.8rem;
+        padding-bottom: 1rem;
+    }
 
-}
-@media (max-width: 414px) {
+    .the-single {
+        padding: 1.5rem;
+    }
 
-}
-@media (max-width: 375px) {
+    .post-content {
+        font-size: 1rem;
+        line-height: 1.6rem;
+    }
 
+    .go-down {
+        display: none;
+    }
 }
-@media (max-width: 360px) {
 
-}
-@media (max-width: 320px) {
+@media (max-width: 533px) {}
 
-}
-@media (max-width: 240px) {
+@media (max-width: 414px) {}
 
-}
+@media (max-width: 375px) {}
+
+@media (max-width: 360px) {}
+
+@media (max-width: 320px) {}
+
+@media (max-width: 240px) {}
