--- a/css/europaplus-style.css
+++ b/css/europaplus-style.css
@@ -90,7 +90,39 @@ a:hover {
   background: none;
 }
 /* --------------------------------------------------------------
-2.- HELP ARTICLES
+2.- FOOTER
+-------------------------------------------------------------- */
+.the-footer {
+  padding: 0 1.5rem;
+  padding-top: 3rem;
+}
+.footer-item ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.footer-item .nav-link {
+  color: #ffffff;
+  font-size: .9rem;
+  padding: .2rem 0;
+  padding-left: 0;
+}
+.footer-copy {
+  text-align: center;
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  color: white;
+}
+.footer-copy img {
+  max-width: 200px;
+  margin-bottom: .5rem;
+}
+.footer-copy h5 {
+  font-size: .9rem;
+  font-weight: 400;
+}
+/* --------------------------------------------------------------
+3.- HELP ARTICLES
 -------------------------------------------------------------- */
 .main-help-articles-container {
   padding-top: 8rem;
@@ -128,6 +160,9 @@ a:hover {
   border: 1px solid #ffffff;
   border-right: 2px solid #ffffff;
 }
+.main-help-content {
+  margin-bottom: 1.5rem;
+}
 .main-help-content ul {
   list-style: none;
   padding: 0;
@@ -149,4 +184,180 @@ a:hover {
 .single-main-help-container h1 {
   font-size: 2.3rem;
   margin-bottom: 1.5rem;
+}
+/* single */
+.single-main-helper {
+  padding: 1rem 0;
+}
+.single-main-helper h2 {
+  font-size: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+}
+.single-main-help-menu {
+  border-right: 1px solid #272727;
+  padding: 1rem 0;
+}
+.main-help-menu-content h3 {
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.main-help-menu-content ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 1.5rem;
+}
+.main-help-menu-content ul li a {
+  display: block;
+  padding: .2rem 0;
+  color: #ffffff;
+}
+.main-help-menu-content ul li a:hover {
+  color: #ff00d7;
+}
+.main-help-menu-content ul li .active {
+  color: #ff00d7;
+  font-weight: 600;
+}
+.single-main-help-content {
+  padding: 0 2rem;
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 2.3rem;
+}
+/* --------------------------------------------------------------
+4.- BLOG
+-------------------------------------------------------------- */
+.blog-container {
+  margin-top: 8rem;
+  background: #ffffff;
+}
+.blog-container .archive-item {
+  margin-bottom: 1rem;
+}
+.blog-container .archive-item .archive-item-picture img {
+  width: 100%;
+}
+.blog-container .archive-item .archive-item-info {
+  padding: 1rem 2.5rem;
+  font-size: 0.8rem;
+}
+.blog-container .archive-item .archive-item-info .category-container {
+  display: inline-block;
+  padding-left: 5px;
+}
+.blog-container .archive-item .archive-item-info .category-container a {
+  color: #000000;
+  font-weight: 600;
+}
+.blog-container .archive-item .archive-item-info h2 {
+  font-size: 1.8rem;
+  font-weight: 900;
+  margin: 0.5rem 0;
+  margin-bottom: 1.5rem;
+  color: #000000;
+}
+.blog-container .archive-item .archive-item-excerpt {
+  font-size: 1rem;
+}
+.blog-container .archive-item .author img {
+  border-radius: 100%;
+  margin-right: 5px;
+}
+.blog-container .archive-item .author a {
+  color: #000000;
+}
+.pagination {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.blog-posts-container {
+  padding: 2rem;
+  padding-left: 1rem;
+}
+.sidebar-blog {
+  padding: 2rem;
+  background: #F7F7F7;
+}
+#sidebar {
+  list-style: none;
+  padding: 0;
+}
+#sidebar .widgettitle {
+  font-size: 1rem;
+  margin: 1rem 0;
+  border-bottom: 1px solid gainsboro;
+  padding-bottom: 1rem;
+}
+#sidebar a {
+  color: #000000;
+}
+/* SINGLE */
+.the-single {
+  background: #ffffff;
+  padding: 2rem;
+}
+.the-sidebar {
+  padding: 2rem;
+  background: #F7F7F7;
+}
+.main-post-thumbnail {
+  position: relative;
+  padding: 0;
+}
+.main-post-thumbnail img {
+  width: 100%;
+  height: auto;
+}
+.main-post-thumbnail .main-post-thumbnail-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  padding: 2rem;
+  padding-bottom: 1rem;
+  background: rgba(0, 0, 0, 0.3);
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: flex-start;
+  flex-flow: column;
+  justify-content: flex-end;
+}
+.main-post-thumbnail .main-post-thumbnail-overlay a {
+  color: #ffffff;
+  font-weight: 600;
+  margin-right: 5px;
+}
+.main-post-thumbnail .main-post-thumbnail-overlay h1 {
+  font-size: 2.3rem;
+  line-height: 3rem;
+  font-weight: 600;
+}
+.post-content {
+  font-size: 1.1rem;
+  line-height: 1.9rem;
+  text-align: justify;
+}
+.post-content a {
+  color: #ff00d7;
+}
+.go-down {
+  padding-top: 1rem;
+  width: 100%;
+  text-align: center;
+}
+.go-down a {
+  color: #ffffff;
 }
