--- a/css/europaplus-style.less
+++ b/css/europaplus-style.less
@@ -514,12 +514,17 @@ a {
             padding: 1rem 2.5rem;
             font-size: 0.7rem;
 
+            & .date {
+                color: #FF00D2;
+            }
+
             & .category-container {
+                color: #FF00D2;
                 display: inline-block;
                 padding-left: 5px;
 
                 & a {
-                    color: #46505A;
+                    color: #FF00D2;
                     font-weight: 600;
                 }
             }
@@ -578,7 +583,7 @@ a {
         font-size: 1.3rem;
         font-weight: 600;
         margin: 1rem 0;
-        border-bottom: 2px solid #190032;
+        border-bottom: 2px solid #FF00D2;
         padding-bottom: 1rem;
 
     }
@@ -659,7 +664,7 @@ a {
 
         & h3 {
             text-align: center;
-            color: #46505A;
+            color: #FF00D2;
             font-weight: 600;
             font-size: 1rem;
         }
@@ -739,7 +744,7 @@ a {
         & h1 {
             font-size: 2.3rem;
             line-height: 3rem;
-            font-weight: 600;
+            font-weight: 900;
         }
     }
 }
@@ -748,8 +753,7 @@ a {
     padding: .5rem 1rem;
 
     & a {
-        color: #46505A;
-        font-weight: 600;
+        color: #FF00D2;
         margin-right: 5px;
     }
 
@@ -757,10 +761,11 @@ a {
         color: #190032;
         font-size: 2.3rem;
         line-height: 3rem;
-        font-weight: 700;
+        font-weight: 900;
     }
 
     & .main-post-meta {
+        color: #FF00D2;
         font-size: 0.9rem;
     }
 }
@@ -770,6 +775,7 @@ a {
     font-size: 1.1rem;
     line-height: 1.9rem;
     text-align: justify;
+    color: #46505A;
 
     & a {
         color: @pink;
@@ -928,6 +934,19 @@ a {
 
     & .archive-item-info {
         padding: 0 !important;
+
+        & .date {
+            color: #FF00D2;
+        }
+
+        & .category-container {
+            color: #FF00D2;
+
+            & a {
+                color: #FF00D2;
+            }
+        }
+
     }
 }
 
@@ -947,12 +966,16 @@ a {
         font-size: 1.5rem !important;
     }
 
-    & .archive-item-meta a {
-        color: #210031 !important;
-        font-weight: 600;
+    & .archive-item-meta {
+        color: #FF00D2;
+
+        & a {
+            color: #FF00D2 !important;
+            font-weight: 600;
+        }
     }
 
-    .excerpt-link {
+    & .excerpt-link {
         color: #ff00d2;
         font-weight: 600;
     }
