Agregado el wp_body_open()

--- a/css/europaplus-style.css
+++ b/css/europaplus-style.css
@@ -417,7 +417,7 @@ a:hover {
 }
 .blog-container .archive-item .archive-item-excerpt {
   font-size: 1.2rem;
-  color: #190032;
+  color: #46505A;
   line-height: 1.5rem;
 }
 .blog-container .archive-item .author img {
@@ -513,6 +513,7 @@ a:hover {
   padding: 0;
   padding-bottom: 0.5rem;
   margin: 0;
+  border: 0 !important;
 }
 #sidebar .custom_mailchimp_form h3 {
   text-align: center;
