--- a/css/europaplus-style.less
+++ b/css/europaplus-style.less
@@ -539,7 +539,7 @@ a {
 
         & .archive-item-excerpt {
             font-size: 1.2rem;
-            color: #190032;
+            color: #46505A;
             line-height: 1.5rem;
         }
 
@@ -660,6 +660,7 @@ a {
             padding: 0;
             padding-bottom: .5rem;
             margin: 0;
+            border: 0 !important;
         }
 
         & h3 {
